# ai-golf-coaches

./: .gitignore  .pre-commit-config.yaml  MODEL_UPGRADES.md  README.md  agents.md  compare_models.py  notes.md  pyproject.toml  sandbox.ipynb  streamlit_app.py  test_session.py
.devcontainer/: devcontainer.json  post_attach.sh
ai_golf_coaches/: __init__.py  agent.py  classifier.py  cli.py  concept_extractor.py  config.py  constants.py  indexing.py  models.py  personalities.py  qa_extraction.py  rag.py  transcripts.py  utils.py  youtube.py  youtube_client.py
config/: channels.yaml  secrets.yaml
data/elitegolfschools/: catalog.jsonl
data/elitegolfschools/qa/: 0d1T1IiNv0E.jsonl  1j-GQ0mIxNA.jsonl  3fVkUC5BKwo.jsonl  3p9Nu_pALwA.jsonl  4c5lHtnuqVM.jsonl  9gPuDotp6ww.jsonl  D9vgxAkUUk0.jsonl  GHUDCgrrkD0.jsonl  H2PbVPSsodo.jsonl  IqwgYuzZ48A.jsonl  Jhd-TePSkfk.jsonl  KLanZmIui08.jsonl  KZaXtq4zS2Q.jsonl  KpgQLU2-ads.jsonl  RAaH2c3XWVw.jsonl  SuwI1lln9Xk.jsonl  _tI_qFz6Q2s.jsonl  c15UN9i1iO4.jsonl  d9s2aXH5BNQ.jsonl  g5fypwG6Z4Q.jsonl  j01F-Ed_EoU.jsonl  k29IYuAf-Ts.jsonl  l_75y8CLNOA.jsonl  nr_cffRP6YE.jsonl  uvPQ1FeYuxM.jsonl  v4qLJCQB-Ac.jsonl  weOXIrzRJ6I.jsonl  wlHyK_43hJE.jsonl  xh0jhNNqqeU.jsonl  yd4wNozxwGQ.jsonl  z2eA7uA5eI4.jsonl  zsf6WI51Hck.jsonl
data/elitegolfschools/transcripts/: -eKQD-9_2qA.jsonl  -eYJtkacBIU.jsonl  07ZxDD-pXgo.jsonl  0LI6j6tAfZc.jsonl  0d1T1IiNv0E.jsonl  0oVinDtvN20.jsonl  12D4kk0UkBY.jsonl  1Pj28UxpCGc.jsonl  1SAkVY48htI.jsonl  1ZDgatxIO5c.jsonl  1j-GQ0mIxNA.jsonl  2CwizITuaHk.jsonl  2XD9GhTpJ4Q.jsonl  2qPwHeqwmsU.jsonl  3Mhn9DPFK3M.jsonl  3fVkUC5BKwo.jsonl  3p9Nu_pALwA.jsonl  4JlWF6uc8_k.jsonl  4bXvkP505Po.jsonl  4c5lHtnuqVM.jsonl  4nh0FzkDWyk.jsonl  4uumNwjrHUA.jsonl  69F-qhOnPw8.jsonl  69SCQq1t_Og.jsonl  7H_Io-ihcTA.jsonl  7cAa9JPT9z0.jsonl  7ygGWr6kwh0.jsonl  84Vr2ZHafxU.jsonl  8E3KvfHTdTI.jsonl  8SoRSLi2qGE.jsonl  9979ZfQWuNc.jsonl  9gPuDotp6ww.jsonl  A3Ot4reFgTE.jsonl  AIr2miv9_00.jsonl  Ad1c794atTA.jsonl  AdCgluJHsns.jsonl  Clax19sQoBY.jsonl  D9vgxAkUUk0.jsonl  ES1-leFYZFM.jsonl  EpCsPRrFg2I.jsonl  (+74 more)
data/milolinesgolf/: catalog.jsonl
data/milolinesgolf/transcripts/: -EguBA0TmOA.jsonl  -_Nemifjapo.jsonl  -dWrl-XHN1o.jsonl  0-tJ-3Af--A.jsonl  01r9zLaXFHQ.jsonl  0BQGfZseMIo.jsonl  0DD5Spz3wBQ.jsonl  0Ggd63StcDA.jsonl  0d_MEoVIIUk.jsonl  0fzowDH_dNs.jsonl  0h8mglhS3wQ.jsonl  0jTsRo_p-gM.jsonl  0tsqlS0tO3I.jsonl  1CAV1Uk3rrU.jsonl  1SCRbuxqWoQ.jsonl  1_PnwLdBg6k.jsonl  1pXLT9Iu1no.jsonl  1t00CwbD5So.jsonl  24zRwumTOiE.jsonl  28n_u821Aeg.jsonl  2OUG4BDaTAo.jsonl  (+390 more)
(+1 files in other folders)
